# learning_code_c

./: 7_if_parity_.c  CMakeLists.txt  README.md  hello_world.c  hello_world_zh.c
Wengkai_video_training(done)/: TEXT.C  for循环，阶乘.cpp  hello.c  switchcase.cpp  三个数字比大小.cpp  判断成绩.cpp  整数逆算.cpp  未命名1.cpp  未命名2.cpp  比较运算.c  猜数字随机数.c  身高.c  阶乘.cpp
runtime/: hello_world_c.ilk  training_chapter7_7_if_parity_joking_c.ilk
training/Wengkai_video_training(done)/: max.cpp  取平均数.cpp  复合赋值.c  时间差if.c
training/chapter2/: 1.cpp  4.cpp  5.cpp  未命2cpp.cpp  未命名1.cpp  未命名3.cpp
training/chapter7/: 7.8_paint
